--- a/Feign-Consumer/src/main/resources/application.yml
+++ b/Feign-Consumer/src/main/resources/application.yml
@@ -8,15 +8,12 @@ spring:
 eureka:
   client:
     serviceUrl:
-      defaultZone: http://mrbird:123456@peer1:8080/eureka/,http://mrbird:123456@peer2:8081/eureka/
-
-rwn:
-  test:
-    url: http://localhost:8080
+      defaultZone: http://localhost:8080/eureka/
+#      ,http://localhost:8081/eureka/
 
 feign:
   hystrix:
-    enabled: true
+    enabled: false
 logging:
   level:
     com:
