--- a/pom.xml
+++ b/pom.xml
@@ -133,6 +133,8 @@
 		<module>spring-cloud-openfeign-core</module>
 		<module>spring-cloud-starter-openfeign</module>
 		<module>Feign-Consumer</module>
+		<module>Eureka-Service</module>
+		<module>Eureka-Client</module>
 		<module>docs</module>
 	</modules>
 	<profiles>
